fix page width and auto-wrap of console

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -310,8 +310,11 @@
 .wy-nav-content
   padding: $gutter $gutter * 2
   height: 100%
-  max-width: 800px
+  max-width: 100%
   margin: auto
+  
+.highlight
+  white-space: pre-wrap
 
 .wy-body-mask
   position: fixed
